long topic names overflow correctly in info sidebar

--- a/app/assets/stylesheets/api/info-sidebar.scss
+++ b/app/assets/stylesheets/api/info-sidebar.scss
@@ -27,6 +27,7 @@
   text-overflow: ellipsis;
   margin-left: 10px;
   white-space: nowrap;
+  overflow: hidden;
 }
 
 .cancel-button-info {
